# note-lsm

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs
raycast/helper/: Cargo.toml
raycast/helper/src/: main.rs
raycast/note-lsm/: CHANGELOG.md  README.md  package-lock.json  package.json
raycast/note-lsm/src/: quick-note.tsx  reminder.ts
src/: main.rs
tauri/: package-lock.json  package.json  vite.config.js
tauri/src/: app.html  hash.ts  native.ts  time.test.ts  time.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs
tauri/src/components/: Bar.svelte  DateTime.svelte  Inspiration.svelte  NoteEntry.svelte  NoteEntryChildren.svelte  NoteEntryInner.svelte  NoteEntryLoader.svelte  NoteStack.svelte
tauri/src/components/md/: Render.svelte  RenderChildren.svelte  RenderContent.svelte  RenderText.svelte  RenderVerbatim.svelte
tauri/src/routes/: +layout.ts  +page.svelte
tauri/src/stories/: NoteEntryInner.stories.svelte
