[package]
name = "note-lsm-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
atuin-client = "18.3.0"
atuin-common = "18.3.0"
async-trait = "0.1"
eyre = "0.6"
ciborium-io = { version = "0.2.2", features = ["std"] }
ciborium-ll = { version = "0.2.2", features = ["std"] }
uuid = "1"
jiff = "0.1.14"

[dev-dependencies]
hex-literal = "0.4.1"
